--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
     <div class="main-container">
         <!-- ===== Aside Start ===== -->
         <div class="aside">
-            aside
+            <div class="logo">
+                <a href="#"><span>N</span>iko</a>
+            </div>
+            <ul class="nav">
+                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
+                <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+            </ul>
         </div>
         <!-- ===== Aside End ===== -->
         <!-- ===== Main Content Start ===== -->
         <div class="main-content">
             <!-- ===== Home Section Start ===== -->
-            <section class="section home">
-                
+            <section class="home section">
+
             </section>
             <!-- ===== Home Section End ===== -->
         </div>
