--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <div class="logo">
                 <a href="#"><span>N</span>iko</a>
             </div>
+            <div class="nav-toggler">
+                <span></span>
+            </div>
             <ul class="nav">
                 <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="fa fa-user"></i>About</a></li>
@@ -31,7 +34,7 @@
         <div class="main-content">
             <!-- ===== Home Section Start ===== -->
             <section class="home section">
-
+                home
             </section>
             <!-- ===== Home Section End ===== -->
         </div>
