Creazione e elaborazione CSS delle partizioni in home

--- a/index.html
+++ b/index.html
@@ -34,7 +34,23 @@
         <div class="main-content">
             <!-- ===== Home Section Start ===== -->
             <section class="home section">
-                home
+                <div class="container">
+                    <div class="row">
+                        <div class="home-info padd-15">
+                            <h3 class="hello">Ciao, mi chiamo <span class="name">Nicholas Marcaccini</span></h3>
+                            <h3 class="my-profession">Sono un <span>Jr Full Stack Web Developer</span></h3>
+                            <p>Una volta terminati i miei studi mi sono impegnato per poter mettere qualcosa da parte per poter così investire sulla 
+                                mia passione, l'informatica. Per me scrivere codice è un modo per utilizzare la mia mente per trasformare delle 
+                                idee astratte in realtà.
+                                Mi piace descrivermi come una persona solare, con tanta voglia di fare e organizzato in modo da non deludere 
+                                mai le aspettative.</p>
+                                <a href="#contact" class="btn hire-me">Di più su di me</a>
+                        </div>
+                        <div class="home-img padd-15">
+                            <img src="images/hero.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
             </section>
             <!-- ===== Home Section End ===== -->
         </div>
