Definito il corpo della section + aggiunte le info personali

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- ===== Main Content Start ===== -->
         <div class="main-content">
             <!-- ===== Home Section Start ===== -->
-            <section class="home section">
+            <section class="home section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -53,6 +53,59 @@
                 </div>
             </section>
             <!-- ===== Home Section End ===== -->
+
+            <!-- ===== About Section Start ===== -->
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>I'm Nicholas Marcaccini and <span>Web Developer</span></h3>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, aspernatur. Dolorem eaque ratione esse. Nesciunt voluptatum non excepturi soluta aliquid, nobis illum. Dignissimos, quia! Ipsa labore sunt sapiente quaerat reprehenderit neque libero repellendus possimus doloribus, ratione accusamus! Nisi natus odit nesciunt non, excepturi necessitatibus et sint deleniti corporis blanditiis est ex illo fuga suscipit voluptatibus.</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>Anno di nascita : <span>20 Gen 1992</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Anni : <span>30</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>GitHub : <span>/NicholasDevelop</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Linkedin : <span>/nicholas-marcaccini-5191b123b/</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Email : <span>marcaccini.n@gmail.com</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Degree : <span>CS</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Telefono : <span>392 5147721</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Città : <span>Seveso (MB)</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills padd-15">Skills</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ===== About Section End ===== -->
         </div>
         <!-- ===== Main Content End ===== -->
     </div>
