--- a/index.html
+++ b/index.html
@@ -150,7 +150,29 @@
                                     <h3 class="title">Education</h3>
                                     <div class="row">
                                         <div class="timeline-box padd-15">
-                                            <div class="timeline">
+                                            <div class="timeline shadow-dark">
+                                                <!-- ===== Timeline Item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore 
+                                                        asperiores expedita repellendus dolor exercitationem ut molestias autem id, incidunt 
+                                                        consequatur doloribus veritatis voluptas mollitia totam?</p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore 
+                                                        asperiores expedita repellendus dolor exercitationem ut molestias autem id, incidunt 
+                                                        consequatur doloribus veritatis voluptas mollitia totam?</p>
+                                                </div>
 
                                             </div>
                                         </div>
@@ -158,6 +180,35 @@
                                 </div>
                                 <div class="experience padd-15">
                                     <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- ===== Timeline Item ===== -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore 
+                                                        asperiores expedita repellendus dolor exercitationem ut molestias autem id, incidunt 
+                                                        consequatur doloribus veritatis voluptas mollitia totam?</p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore 
+                                                        asperiores expedita repellendus dolor exercitationem ut molestias autem id, incidunt 
+                                                        consequatur doloribus veritatis voluptas mollitia totam?</p>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
