--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             </ul>
         </div>
         <!-- ===== Aside End ===== -->
+
         <!-- ===== Main Content Start ===== -->
         <div class="main-content">
             <!-- ===== Home Section Start ===== -->
-            <section class="home section hidden">
+            <section class="home section">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -216,6 +217,86 @@
                 </div>
             </section>
             <!-- ===== About Section End ===== -->
+            
+            <!-- ===== Services Section Start ===== -->
+            <section class="service section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Services</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- ====== Service Item Start ===== -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti corporis provident quam?</p>
+                            </div>
+                        </div>
+                        <!-- ====== Service Item End ===== -->
+                        <!-- ====== Service Item Start ===== -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-laptop-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti corporis provident quam?</p>
+                            </div>
+                        </div>
+                        <!-- ====== Service Item End ===== -->
+                        <!-- ====== Service Item Start ===== -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-palette"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti corporis provident quam?</p>
+                            </div>
+                        </div>
+                        <!-- ====== Service Item End ===== -->
+                        <!-- ====== Service Item Start ===== -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti corporis provident quam?</p>
+                            </div>
+                        </div>
+                        <!-- ====== Service Item End ===== -->
+                        <!-- ====== Service Item Start ===== -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti corporis provident quam?</p>
+                            </div>
+                        </div>
+                        <!-- ====== Service Item End ===== -->
+                        <!-- ====== Service Item Start ===== -->
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-bullhorn"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti corporis provident quam?</p>
+                            </div>
+                        </div>
+                        <!-- ====== Service Item End ===== -->
+                    </div>
+                </div>
+            </section>
+            <!-- ===== Services Section End ===== -->
         </div>
         <!-- ===== Main Content End ===== -->
     </div>
