Caricate img per il portfolio e iniziata la sezione con i contatti

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="image/portfolio/#" alt="">
+                                    <img src="images/portfolio/portfolio1.jfif" alt="">
                                 </div>
                             </div>
                         </div>
@@ -325,7 +325,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="image/portfolio/#" alt="">
+                                    <img src="images/portfolio/portfolio2.jfif" alt="">
                                 </div>
                             </div>
                         </div>
@@ -334,7 +334,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="image/portfolio/#" alt="">
+                                    <img src="images/portfolio/portfolio3.jfif" alt="">
                                 </div>
                             </div>
                         </div>
@@ -343,7 +343,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="image/portfolio/#" alt="">
+                                    <img src="images/portfolio/portfolio4.jfif" alt="">
                                 </div>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="image/portfolio/#" alt="">
+                                    <img src="images/portfolio/portfolio5.jfif" alt="">
                                 </div>
                             </div>
                         </div>
@@ -361,7 +361,7 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="image/portfolio/#" alt="">
+                                    <img src="images/portfolio/portfolio6.jfif" alt="">
                                 </div>
                             </div>
                         </div>
@@ -370,6 +370,20 @@
                 </div>
             </section>
             <!-- ===== Portfolio Section End ===== -->
+
+            <!-- ===== Contact Section Start ===== -->
+            <section class="contact section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Contact Me</h2>
+                        </div>
+                    </div>
+                    <h3 class="contact-title">Have You Any Question =</h3>
+                    <h4 class="contact-sub-title">I'M AT YOUR SERVICES</h4>
+                </div>
+            </section>
+            <!-- ===== Contact Section End ===== -->
         </div>
         <!-- ===== Main Content End ===== -->
     </div>
