Creata parte grafica per la scelta dei colori

--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
     <!-- ===== Style Switcher Start ===== -->
     <div class="style-switcher">
         <div class="style-switcher-toggler s-icon">
-            <div class="fas fa-cog fa-skin"></div>
+            <div class="fas fa-cog fa-spin"></div>
         </div>
         <div class="day-night s-icon">
             <i class="fas fa-moon"></i>
