--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/skins/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <!-- ===== Style Switcher ===== -->
+    <link rel="stylesheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
+    <link rel="stylesheet" href="css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
+    <link rel="stylesheet" href="css/skins/color-3.css" class="alternate-style" title="color-3" disabled>
+    <link rel="stylesheet" href="css/skins/color-4.css" class="alternate-style" title="color-4" disabled>
+    <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
     <link rel="stylesheet" href="css/style-switcher.css">
 </head>
 <body>
@@ -461,7 +467,7 @@
     <!-- ===== Style Switcher Start ===== -->
     <div class="style-switcher">
         <div class="style-switcher-toggler s-icon">
-            <div class="fas fa-cog fa-spin"></div>
+            <i class="fas fa-cog fa-spin"></i>
         </div>
         <div class="day-night s-icon">
             <i class="fas fa-moon"></i>
@@ -477,5 +483,7 @@
     </div>
     <!-- ===== Style Switcher End ===== -->
     <!-- ===== JS Files ===== -->
+    <script src="js/script.js"></script>
+    <script src="js/style-switcher.js"></script>
 </body>
 </html>
