Implementata cdn per auto typing

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
-                <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
-                <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+                <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
+                <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
         </div>
         <!-- ===== Aside End ===== -->
@@ -41,12 +41,12 @@
         <!-- ===== Main Content Start ===== -->
         <div class="main-content">
             <!-- ===== Home Section Start ===== -->
-            <section class="home section">
+            <section class="home section" id="home">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Ciao, mi chiamo <span class="name">Nicholas Marcaccini</span></h3>
-                            <h3 class="my-profession">Sono un <span>Jr Full Stack Web Developer</span></h3>
+                            <h3 class="my-profession">Sono un <span class="typing">Jr Full Stack Web Developer</span></h3>
                             <p>Una volta terminati i miei studi mi sono impegnato per poter mettere qualcosa da parte per poter così investire sulla 
                                 mia passione, l'informatica. Per me scrivere codice è un modo per utilizzare la mia mente per trasformare delle 
                                 idee astratte in realtà.
@@ -63,7 +63,7 @@
             <!-- ===== Home Section End ===== -->
 
             <!-- ===== About Section Start ===== -->
-            <section class="about section">
+            <section class="about section" id="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -226,7 +226,7 @@
             <!-- ===== About Section End ===== -->
             
             <!-- ===== Services Section Start ===== -->
-            <section class="service section">
+            <section class="service section" id="services">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -306,7 +306,7 @@
             <!-- ===== Services Section End ===== -->
 
             <!-- ===== Portfolio Section Start ===== -->
-            <section class="portfolio section">
+            <section class="portfolio section" id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -379,7 +379,7 @@
             <!-- ===== Portfolio Section End ===== -->
 
             <!-- ===== Contact Section Start ===== -->
-            <section class="contact section">
+            <section class="contact section" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -482,7 +482,9 @@
         </div>
     </div>
     <!-- ===== Style Switcher End ===== -->
+
     <!-- ===== JS Files ===== -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
     <script src="js/style-switcher.js"></script>
 </body>
