--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
+                <!-- <li><a href="#services"><i class="fa fa-list"></i>Services</a></li> -->
                 <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
@@ -52,7 +52,7 @@
                                 idee astratte in realtà.
                                 Mi piace descrivermi come una persona solare, con tanta voglia di fare e organizzato in modo da non deludere 
                                 mai le aspettative.</p>
-                                <a href="#contact" class="btn hire-me">Di più su di me</a>
+                                <a href="#" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="images/hero.jpg" alt="">
@@ -108,8 +108,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="#" class="btn">Download CV</a>
-                                            <a href="#contact" class="btn hire-me">Hire me</a>
+                                            <a href="#contact" data-section-index="1" class="btn hire-me">Hire me</a>
                                         </div>
                                     </div>
                                 </div>
