Sostituiti i dati fittizi con quelli reali

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>I'm Nicholas Marcaccini and <span>Web Developer</span></h3>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, aspernatur. Dolorem eaque ratione esse. Nesciunt voluptatum non excepturi soluta aliquid, nobis illum. Dignissimos, quia! Ipsa labore sunt sapiente quaerat reprehenderit neque libero repellendus possimus doloribus, ratione accusamus! Nisi natus odit nesciunt non, excepturi necessitatibus et sint deleniti corporis blanditiis est ex illo fuga suscipit voluptatibus.</p>
+                                    <h3>Mi chiamo Nicholas Marcaccini e sono un <span>Web Developer</span></h3>
+                                    <p>Una volta terminati i miei studi mi sono impegnato per poter mettere qualcosa da parte per poter così investire sulla mia passione, l'informatica. Per me scrivere codice è un modo per utilizzare la mia mente per trasformare delle idee astratte in realtà. Mi piace descrivermi come una persona solare, con tanta voglia di fare e organizzato in modo da non deludere mai le aspettative.</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -97,7 +97,7 @@
                                             <p>Email : <span>marcaccini.n@gmail.com</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Degree : <span>CS</span></p>
+                                            <p>Titolo : <span>CS</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Telefono : <span>392 5147721</span></p>
@@ -154,7 +154,7 @@
                             </div>
                             <div class="row">
                                 <div class="education padd-15">
-                                    <h3 class="title">Education</h3>
+                                    <h3 class="title">Formazione</h3>
                                     <div class="row">
                                         <div class="timeline-box padd-15">
                                             <div class="timeline shadow-dark">
@@ -162,25 +162,50 @@
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                        <i class="fa fa-calendar"></i> Nov 2021 - Giu 2022
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore 
-                                                        asperiores expedita repellendus dolor exercitationem ut molestias autem id, incidunt 
-                                                        consequatur doloribus veritatis voluptas mollitia totam?</p>
+                                                    <h4 class="timeline-title">Boolean Careers</h4>
+                                                    <h4 class="timeline-subtitle">Master, Full Stack Web Developer</h4>
+                                                    <p class="timeline-text">Corso intensivo full-time di 700 ore di esercizi e lezioni in cui ho imparato: </p>
+                                                    <p class="timeline-text">Languages: HTML5, CSS3(SCSS), JavaScript, MySQL, PHP </p>
+                                                    <p class="timeline-text">Framework CSS: Bootstrap 3/4, Tailwind 3/4 </p>
+                                                    <p class="timeline-text">Javascript Libraries/Framework: jQuery, Moment.js, Handlebars, Vue.js </p>
+                                                    <p class="timeline-text">Framework PHP: Laravel </p>
+                                                    <p class="timeline-text">CMS: Wordpress </p>
+                                                    <p class="timeline-text">Versioning system: GIT </p>
+                                                    <p class="timeline-text">Package Manager: NPM, Composer </p>
                                                 </div>
 
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                        <i class="fa fa-calendar"></i> Conseguito nel 2013
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore 
-                                                        asperiores expedita repellendus dolor exercitationem ut molestias autem id, incidunt 
-                                                        consequatur doloribus veritatis voluptas mollitia totam?</p>
+                                                    <h4 class="timeline-title">I.I.S. Vilfredo Federico Pareto</h4>
+                                                    <h4 class="timeline-subtitle">Diploma di scuola Secondaria Superiore, Ragioneria con Perito Informatico</h4>
+                                                    <p class="timeline-text">Principali materie / abilità professionali oggetto dello studio:  </p>
+                                                    <p class="timeline-text">Utilizzo del pacchetto Office (compreso Visual Basic Editor), Notepad ++, Derive6, Oracle. Studio dei linguaggi di programmazione Html, Php, Cobol, Sql, prompt dei comandi. </p>
                                                 </div>
 
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Feb 2011
+                                                    </h3>
+                                                    <h4 class="timeline-title">Certificato ECDL</h4>
+                                                    <h4 class="timeline-subtitle">European Computer Driving Licence</h4>
+                                                    <p class="timeline-text">Abilità professionali oggetto dello studio: </p>
+                                                    <p class="timeline-text">Concetti base della IT, uso dei computer/gestione file, elaborazione testi, foglio elettronico(XLS), database, reti informatiche, presentazione power point. </p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Lug 2009
+                                                    </h3>
+                                                    <h4 class="timeline-title">Certificato di tedesco (A2)</h4>
+                                                </div>
+                                                
                                             </div>
                                         </div>
                                     </div>
@@ -194,23 +219,53 @@
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                        <i class="fa fa-calendar"></i> Nov 2021 - Giu 2022
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore 
-                                                        asperiores expedita repellendus dolor exercitationem ut molestias autem id, incidunt 
-                                                        consequatur doloribus veritatis voluptas mollitia totam?</p>
+                                                    <h4 class="timeline-title">Jr. Full Stack Developer Trainee</h4>
+                                                    <h4 class="timeline-subtitle">Boolean Careers · A tempo pieno</h4>
+                                                    <p class="timeline-text">Sei mesi di corso intensivo in cui ho realizzato Progetti completi replicando Applicativi Web come Spotify Web, Whatsapp Web, Netflix. </p>
+                                                    <p class="timeline-text">Ho imparato a utilizzare efficacemente teconologie come HTML5, SASS, JavaScript, JQuery, PHP, MySQL e Laravel. </p>
                                                 </div>
 
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                        <i class="fa fa-calendar"></i> Apr 2021 - Nov 2021
                                                     </h3>
-                                                    <h4 class="timeline-title">Master in Computer Science</h4>
-                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore 
-                                                        asperiores expedita repellendus dolor exercitationem ut molestias autem id, incidunt 
-                                                        consequatur doloribus veritatis voluptas mollitia totam?</p>
+                                                    <h4 class="timeline-title">Corriere</h4>
+                                                    <h4 class="timeline-subtitle">Foglia Servizi S.r.l. - Presso BRT · A tempo pieno</h4>
+                                                    <p class="timeline-text">Gestione e organizzazione della tabella di marcia giornaliera, gestione della logistica in maniera ottimale per un risparmio del tempo, consegna/ritiro merci presso vari clienti rispettando gli orari da me prefissati. </p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Giu 2019 - Apr 2021
+                                                    </h3>
+                                                    <h4 class="timeline-title">Metalmeccanico</h4>
+                                                    <h4 class="timeline-subtitle">Azienda Tecnica S.r.l - Presso Acqualife</h4>
+                                                    <p class="timeline-text">Svolta la mansione di tecnico per manutenzione e riparazione di impianti di depurazione dell’acqua, addolcitori ed ozonizzatori. Studio dei vari componenti e della funzionalità degli impianti per un efficiente intervento nella risoluzione delle problematiche. </p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Nov 2013 - Giu 2019
+                                                    </h3>
+                                                    <h4 class="timeline-title">Operatore SOC (Security Operation Center)</h4>
+                                                    <h4 class="timeline-subtitle">AXITEA SPA</h4>
+                                                    <p class="timeline-text">Lavoro all’interno della SOC (Security Operation Center), occupandomi di allarmi fissi, satellitari, chiamate in entrata ed in uscita dei clienti, e-mail, fax e gestione del primo livello come operatore di Cyber Security. </p>
+                                                </div>
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Giu 2011 - Ago 2011
+                                                    </h3>
+                                                    <h4 class="timeline-title">Responsabile Logistica Trainee</h4>
+                                                    <h4 class="timeline-subtitle">MEC System S.r.l.</h4>
+                                                    <p class="timeline-text">Mi sono occupato di diverse mansioni, tra cui: </p>
+                                                    <p class="timeline-text">Aggiornare i software dei prodotti, gestire il layout del magazzino, del carico/scarico merci, della gestione del database dei clienti e delle ricerche internet su eventuali acquirenti o venditori per l'azienda. </p>
                                                 </div>
 
                                             </div>
@@ -314,7 +369,7 @@
                     </div>
                     <div class="row">
                         <div class="portfolio-heading padd-15">
-                            <h2>My Last Projects :</h2>
+                            <h2>I miei ultimi progetti :</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -382,24 +437,24 @@
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Contact Me</h2>
+                            <h2>Contattami</h2>
                         </div>
                     </div>
-                    <h3 class="contact-title padd-15">Have You Any Question ?</h3>
-                    <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICES</h4>
+                    <h3 class="contact-title padd-15">Hai qualche domanda ?</h3>
+                    <h4 class="contact-sub-title padd-15">SONO AL TUO SERVIZIO</h4>
                     <div class="row">
                         <!-- ===== Contact Info Item Start ===== -->
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
-                            <h4>Call Us On</h4>
+                            <h4>Chiamami</h4>
                             <p>392 5147721</p>
                         </div>
                         <!-- ===== Contact Info Item End ===== -->
                         <!-- ===== Contact Info Item Start ===== -->
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-                            <h4>Office</h4>
-                            <p>Seveso</p>
+                            <h4>Residenza</h4>
+                            <p>Seveso (MB)</p>
                         </div>
                         <!-- ===== Contact Info Item End ===== -->
                         <!-- ===== Contact Info Item Start ===== -->
@@ -412,13 +467,13 @@
                         <!-- ===== Contact Info Item Start ===== -->
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-globe-europe"></i></div>
-                            <h4>Website</h4>
-                            <p>www....</p>
+                            <h4>Project Website</h4>
+                            <p>https://github.com/NicholasDevelop</p>
                         </div>
                         <!-- ===== Contact Info Item End ===== -->
                     </div>
-                    <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
-                    <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVETO MESSAGES</h4>
+                    <h3 class="contact-title padd-15">MANDAMI UNA EMAIL</h3>
+                    <!-- <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVE TO MESSAGES</h4> -->
                     <!-- ===== Contact Form ===== -->
                     <div class="row">
                         <div class="contact-form padd-15">
