Aggiunto donload cv sul button + sistemato altro css e media query

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- ===== Aside Start ===== -->
         <div class="aside">
             <div class="logo">
-                <a href="#"><span>N</span>iko</a>
+                <a href="#"><span>N</span>iko<br><span>D</span>eveloper</a>
             </div>
             <div class="nav-toggler">
                 <span></span>
@@ -52,7 +52,7 @@
                                 idee astratte in realtà.
                                 Mi piace descrivermi come una persona solare, con tanta voglia di fare e organizzato in modo da non deludere 
                                 mai le aspettative.</p>
-                                <a href="#" class="btn">Download CV</a>
+                                <a href="https://drive.google.com/uc?export=download&id=1pSYJmH7T-IzHhJ2MqjR90h96kbG6W8Ez" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="images/hero.jpg" alt="">
@@ -108,11 +108,11 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="#contact" data-section-index="1" class="btn hire-me">Hire me</a>
+                                            <a href="#contact" data-section-index="1" class="btn hire-me">Contattami</a>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="skills padd-15">
+                                <!-- <div class="skills padd-15">
                                     <div class="row">
                                         <div class="skill-item padd-15">
                                             <h5>HTML</h5>
@@ -150,7 +150,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="row">
                                 <div class="education padd-15">
