Aggiunte alcune migliorie estetiche

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
-                <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#about"><i class="fa fa-user"></i>About Me</a></li>
                 <!-- <li><a href="#services"><i class="fa fa-list"></i>Services</a></li> -->
                 <li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
@@ -74,8 +74,10 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>Mi chiamo Nicholas Marcaccini e sono un <span>Web Developer</span></h3>
-                                    <p>Una volta terminati i miei studi mi sono impegnato per poter mettere qualcosa da parte per poter così investire sulla mia passione, l'informatica. Per me scrivere codice è un modo per utilizzare la mia mente per trasformare delle idee astratte in realtà. Mi piace descrivermi come una persona solare, con tanta voglia di fare e organizzato in modo da non deludere mai le aspettative.</p>
+                                    <h3>Come ormai saprai, mi chiamo Nicholas Marcaccini e sono un <span>Jr Web Developer</span></h3>
+                                    <p>Ma prima di diventare ciò che sono ho intrapreso dei percorsi di formazione ed altre esperienze di cui vorrei renderti partecipe:</p>
+                                    <!-- <h3>Mi chiamo Nicholas Marcaccini e sono un <span>Web Developer</span></h3> -->
+                                    <!-- <p>Una volta terminati i miei studi mi sono impegnato per poter mettere qualcosa da parte per poter così investire sulla mia passione, l'informatica. Per me scrivere codice è un modo per utilizzare la mia mente per trasformare delle idee astratte in realtà. Mi piace descrivermi come una persona solare, con tanta voglia di fare e organizzato in modo da non deludere mai le aspettative.</p> -->
                                 </div>
                             </div>
                             <div class="row">
